# libjxl

./: .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  AUTHORS  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MODULE.bazel  README.Haiku.md  README.OSX.md  README.md  WORKSPACE  appveyor.yml  bash_test.sh  ci.sh  cmake_uninstall.cmake.in  deps.sh  flake.nix  jpegxl.cmake  jpegxl_extras.cmake  jpegxl_threads.cmake  jpegxltests.cmake  node-wasm-simd.sh  overflow_poc.cc  poc.cc
doc/: CMakeLists.txt  api.txt  benchmarking.md  benchmarking_zho-CN.md  building_and_testing.md  building_and_testing_zho-CN.md  building_wasm.md  building_wasm_zho-CN.md  debugging_workflows.md  developing_in_debian.md  developing_in_debian_zho-CN.md  developing_in_docker.md  developing_in_docker_zho-CN.md  developing_in_github.md  developing_in_github_zho-CN.md  developing_in_gitlab.md  developing_in_windows.md  developing_in_windows_msys.md  developing_in_windows_vcpkg.md  developing_in_windows_zho-CN.md  developing_with_crossroad.md  encode_effort.md  fuzzing.md  guidelines.md  release.md  software_support.md  vuln_playbook.md  xl_overview.md
doc/man/: cjxl.txt  djxl.txt
doc/sChinese/: benchmarking.sc.md  building_and_testing.sc.md  building_wasm.sc.md  developing_in_debian.sc.md  developing_in_docker.sc.md  developing_in_github.sc.md  developing_in_windows.sc.md
doc/sphinx/: api.rst  api_color.rst  api_cpp.rst  api_metadata.rst  conf.py  requirements.txt
doc/tables/: adobe.md  all_tables.sh  app0.md  brn_proto.md  context_modes.md  dct_gen.md  ducky.md  freq_context.md  icc.md  is_zero_base.md  markdown-pdf.css  nonzero_buckets.md  num_nonzero_context.md  num_nonzeros_base.md  quant.md  stock_counts.md  stock_quant.md  stock_values.md  symbol_order.md
lib/: BUILD  CMakeLists.txt  JPEGXLConfig.cmake.in  compatibility.cmake  gbench_main.cc  jpegli.cmake  jxl.cmake  jxl_benchmark.cmake  jxl_cms.cmake  jxl_extras.cmake  jxl_gain_map.cmake  jxl_generate.cmake  jxl_install.cmake  jxl_lists.bzl  jxl_lists.cmake  jxl_tests.cmake  jxl_threads.cmake  jxl_vars.bzl  lib.gni
lib/extras/: alpha_blend.cc  codec.cc  codec.h  codec_apng.cc  codec_apng.h  codec_exr.cc  codec_exr.h  codec_gif.cc  codec_gif.h  codec_in_out.h  codec_jpg.cc  codec_jpg.h  codec_pgx.cc  codec_pgx.h  codec_pgx_test.cc  codec_png.cc  codec_png.h  codec_pnm.cc  codec_pnm.h  codec_psd.cc  codec_psd.h  codec_test.cc  color_hints.cc  color_hints.h  common.cc  compressed_icc.cc  compressed_icc_test.cc  dec_group_jpeg.cc  dec_group_jpeg.h  decode_jpeg.cc  decode_jpeg.h  decode_jpeg_test.cc  encode_jpeg.cc  encode_jpeg.h  exif.cc  exif.h  file_io.h  gain_map.cc  gain_map_test.cc  hlg.cc  (+16 more)
lib/jpegli/: adaptive_quantization.cc  adaptive_quantization.h  bit_writer.cc  bit_writer.h  bitstream.cc  bitstream.h  color_quantize.cc  color_quantize.h  color_transform.cc  color_transform.h  common.cc  common.h  common_api.cc  common_internal.h  dct-inl.h  dct.cc  dct.h  decode.cc  decode.h  decode_api.cc  decode_api_test.cc  decode_internal.h  decode_marker.cc  decode_marker.h  decode_scan.cc  decode_scan.h  destination_manager.cc  downsample.cc  downsample.h  encode.cc  encode.h  encode_api.cc  encode_api_test.cc  encode_finish.cc  encode_finish.h  encode_internal.h  encode_streaming.cc  encode_streaming.h  entropy_coding-inl.h  entropy_coding.cc  (+34 more)
lib/jxl/: ac_context.h  ac_strategy.cc  ac_strategy.h  ac_strategy_test.cc  adaptive_reconstruction_test.cc  alpha.cc  alpha.h  alpha_test.cc  ans_common.cc  ans_common.h  ans_common_test.cc  ans_params.h  ans_test.cc  ar_control_field.cc  ar_control_field.h  aux_out.cc  aux_out.h  bit_reader_test.cc  bits_test.cc  blending.cc  blending.h  blending_test.cc  box.cc  box.h  box_content_decoder.cc  box_content_decoder.h  butteraugli_wrapper.cc  byte_order_test.cc  chroma_from_luma.cc  chroma_from_luma.h  codec_in_out.h  codec_y4m_testonly.cc  coeff_order.cc  coeff_order.h  coeff_order_test.cc  color_encoding_external.h  color_encoding_internal.cc  color_encoding_internal.h  color_encoding_internal_test.cc  color_management.cc  (+333 more)
lib/profiler/: profiler.cc  tsc_timer.h
lib/threads/: libjxl_threads.pc.in  thread_parallel_runner.cc  thread_parallel_runner_internal.cc  thread_parallel_runner_internal.h  thread_parallel_runner_test.cc
plugins/: CMakeLists.txt
plugins/gdk-pixbuf/: CMakeLists.txt  c_interop.cc  c_interop.h  jxl.thumbnailer  loaders_test.cache  pixbufloader-jxl.c
plugins/gimp/: CMakeLists.txt  common.cc  common.h  file-j-load.cc  file-j-load.h  file-j-save.cc  file-j-save.h  file-j.cc  file-jxl-load.cc  file-jxl-load.h  file-jxl-save.cc  file-jxl-save.h  file-jxl.cc
plugins/mime/: CMakeLists.txt  README.md  image-jxl.xml  image-x-jxl.xml
plugins/ngx_jxl/: README.md  config  ngx_http_jxl_module.c  prepare_folder.sh
tools/: BUILD  CMakeLists.txt  README.cjpeg_hdr.md  add_noise.cc  args.h  bisector  build_cleaner.py  build_stats.py  butteraugli_main.cc  butteraugli_pnorm.cc  butteraugli_pnorm.h  cbrunsli.cc  cbrunsli.h  cbrunsli_main.cc  check_author.py  cjpeg_hdr.cc  cjpegli.cc  cjpegxl.cc  cjpegxl.h  cjpegxl_main.cc  cjxl.cc  cjxl.h  cjxl_bisect_bpp  cjxl_bisect_size  cjxl_fuzzer.cc  cjxl_main.cc  cjxl_ng_main.cc  cmdline.cc  cmdline.h  codec_config.cc  codec_config.h  color_encoding_fuzzer.cc  decode_and_encode.cc  decode_basic_info_fuzzer.cc  demo_progressive_saliency_encoding.py  demo_vardct_select.sh  djpegli.cc  djpegxl.cc  djpegxl.h  djpegxl_main.cc  (+66 more)
tools/benchmark/: benchmark_args.cc  benchmark_args.h  benchmark_codec.cc  benchmark_codec.h  benchmark_codec_avif.cc  benchmark_codec_avif.h  benchmark_codec_custom.cc  benchmark_codec_custom.h  benchmark_codec_jpeg.cc  benchmark_codec_jpeg.h  benchmark_codec_jxl.cc  benchmark_codec_jxl.h  benchmark_codec_png.cc  benchmark_codec_png.h  benchmark_codec_webp.cc  benchmark_codec_webp.h  benchmark_file_io.cc  benchmark_file_io.h  benchmark_file_io_test.cc  benchmark_stats.cc  benchmark_stats.h  benchmark_utils.cc  benchmark_utils.h  benchmark_xl.cc
tools/box/: CMakeLists.txt  box.cc  box.h  (+2 more)
(+802 files in other folders)
