# Copyright (c) the JPEG XL Project Authors. All rights reserved.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

"""JPEG XL reference implementation"""

module(
    name = "libjxl",
    repo_name = "libjxl",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "brotli", version = "1.1.0")
bazel_dep(name = "giflib", version = "5.2.1")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "libjpeg_turbo", version = "2.1.91")
bazel_dep(name = "libpng", version = "1.6.40")
bazel_dep(name = "libwebp", version = "1.3.2")
bazel_dep(name = "openexr", version = "3.2.1")
bazel_dep(name = "skcms", version = "20241202.0.bcr.1")

# Requires patching `MODULE.bazel` and `BUILD` files
bazel_dep(name = "highway", version = "1.2.0")
local_path_override(
    module_name = "highway",
    path = "third_party/highway",
)
